# magus2

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/hello/: main.cpp
apps/mvp/: README.md  contracts.hpp  harness.cpp  harness.hpp  logging.cpp  logging.hpp  main.cpp  nodes.cpp  nodes.hpp  runtime.cpp  runtime.hpp  stats.hpp  topology.hpp  wiring.hpp
cmake/: MagusDependencies.cmake  MagusOptions.cmake  MagusTesting.cmake
src/: lib.cpp  lib.hpp
src/infra/: CMakeLists.txt  infra.cpp  infra.hpp
src/infra/app/: host.cpp  host.hpp
src/infra/log/: trace.hpp
src/infra/memory/: arena.hpp
src/infra/topology/: engine.hpp  ports.hpp  runtime.cpp  runtime.hpp  spec.hpp  wire.hpp
src/infra/types/: short_types.hpp
src/math/: CMakeLists.txt  math.cpp  math.hpp
src/trader/: CMakeLists.txt  trader.cpp  trader.hpp
test/: CMakeLists.txt  smoke.cpp  topology_smoke.cpp
